# OpenCL

./: README.md
ocl44/: .cproject  .project  CMakeLists.txt  Makefile  VectorAdd.cl  main.cpp  ocl44  textfile.cpp  textfile.h
ocl44/nbproject/: configurations.xml  project.xml
ocl44/nbproject/private/: Default.properties  configurations.xml
